--- a/config.yaml
+++ b/config.yaml
@@ -1,19 +1,35 @@
+#---------------------------------------------------
+#General Parameters 
+#---------------------------------------------------
 TREAT: "treatment.tsv"
 CONTROL: "control.tsv"
 TREAT_NAME : "stress" 
 CONTROL_NAME : "wildtype"
 WORKDIR: '/rds/project/yhbl2/rds-yhbl2-genehunter/SM/RNASeq'
 STRAND: 2
+N : 2 #Number of replicates
+PAIRED: TRUE  #PAIRED is either TRUE or FALSE  
+MEMORY: "-Xmx40g" #for 40giga, change as much giga as you have 
+
+#---------------------------------------------------------------
+#Choose whether to do genome level or at transcripts level
+#---------------------------------------------------------------
+LEVEL: TRANSCRIPTS #For genome level analysis use GENOME, change to TRANSCRIPTS for transcripts level analysis
+
+
+
+#------------------------------------------------------------------
+#Change this set of parameters if you wish to run at Genome level 
+#------------------------------------------------------------------
 GENOME: "/rds/project/rds-O11U8YqSuCk/SM/annotations/Mus_musculus/Ensembl/GRCm38/Sequence/WholeGenomeFasta/genome.fa"
 GTF: "/rds/project/rds-O11U8YqSuCk/SM/annotations/Mus_musculus/Ensembl/GRCm38/Annotation/Genes/genes.gtf" 
 INDEX: "/rds/project/rds-O11U8YqSuCk/SM/annotations/Mus_musculus/Ensembl/GRCm38/Sequence/Bowtie2Index/genome"
-N : 2 #Number of replicates 
-PAIRED: TRUE  #PAIRED is either TRUE or FALSE  
-TRANSCRIPTS: "/rds/project/rds-O11U8YqSuCk/SM/annotations/Homo_sapiens.GRCh38.cdna.all.fa" 
-LEVEL: TRANSCRIPTS #For genome level analysis use GENOME, change to TRANSCRIPTS for transcripts level analysis
 
+#-------------------------------------------------------------------------
+#Change this set of parameters if you wish to run at transcripts level
+#-------------------------------------------------------------------------
+TRANSCRIPTS: "/rds/project/rds-O11U8YqSuCk/SM/annotations/Homo_sapiens.GRCh38.cdna.all.fa" 
 SALMON_INDEX: "/rds/project/rds-O11U8YqSuCk/SM/annotations/SalmonGRCh38Index" 
-SALMON_LIBRARY: SR
+SALMON_LIBRARY: SR #strand see Salmon documentation 
 TX2GENE: "Ensembltx2gene.txt" 
 TXGTF: "/rds/project/rds-O11U8YqSuCk/SM/annotations/Homo_sapiens.GRCh38.104.gtf.gz"
-MEMORY: "-Xmx40g" #for 40giga, change as much giga as you have 
